# mlt

./: CMakeLists.txt
cmake/: FindEbur128.cmake  FindExif.cmake  FindFFTW.cmake  FindFrei0r.cmake  FindNDI.cmake  FindSDL2.cmake
src/framework/: CMakeLists.txt
src/melt/: CMakeLists.txt
src/modules/: CMakeLists.txt
src/modules/frei0r/: CMakeLists.txt
src/modules/gdk/: CMakeLists.txt
src/modules/ndi/: CMakeLists.txt
src/modules/plus/: CMakeLists.txt
src/modules/qt/: CMakeLists.txt
src/modules/sdl2/: CMakeLists.txt
